[gd_scene load_steps=3 format=3 uid="uid://3j4tqlalvks4"]

[ext_resource type="FontFile" uid="uid://y1802j3jsndd" path="res://Assets/Fonts/Kenney Bold.ttf" id="1_rokvv"]
[ext_resource type="Script" path="res://UI/hud.gd" id="1_sf420"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_sf420")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("1_rokvv")
theme_override_font_sizes/font_size = 16
text = "0"
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("1_rokvv")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("1_rokvv")
theme_override_font_sizes/font_size = 20
text = "Coin Dash!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -47.0
offset_right = 44.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_rokvv")
theme_override_font_sizes/font_size = 16
text = "Start"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true
